# LieMaps

./: README.md  hamiltonian_broadband_impedance.py  hamiltonian_double_potential.py  hamiltonian_longitudinal.py  hamiltonian_real_longitudinal.py  pyproject.toml
examples/: FODO_eigen_tracking.py  eigen_function_finding_drift_kick.py  generate_q_gaussian.py  load_2nd_harmonic_eigens.py  phase_space_tracking.py  potential_well.py  pytpsa_taylor_map.py  run_eigen_many_initials.py  symplectic_drift_kick.py  test.py  tpsa_dragt_finn_example.py
src/: eigen_function_finder.py  eigen_function_kicks_drifts.py  maps.py  plot_phase_space.py  run_eigen_second_order.py  symplectic_maps_rf.py  tpsa_dragt_finn.py
src/LieMaps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
