[project]
name = "LieMaps"
version = "0.1.0"
description = "TPSA-based analysis and symplectic Lie approximations for 2D maps"
authors = [
    { name = "Elleanor Lamb", email = "elamb@cern.ch" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "sympy",
    "matplotlib",
    "scipy",
    "nafflib",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black"
]


[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W"]
